--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve et profitez d'un séjour agréable tout en visitant les quatre coins de la France">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Booki</title>
 </head>
 <body>
     
-   <h1>TEST</h1> 
-   <h2>Test 2</h2>
+    <header>
+        <a href="#">
+            <img src="images/logo/Booki.png" alt="Booki logo">
+        </a>
+        
+        <nav>
+            <a href="#Hebergements">Hébergements</a>
+            <a href="#Inscription" class="lien_inscrire">S'inscrire</a>
+        </nav>
+    </header>
 
 </body>
 </html>
