ajouté le placeholder pour la recherche

--- a/index.html
+++ b/index.html
@@ -26,3 +26,15 @@
 
 </body>
 </html>
+
+<section class="parametres">
+    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+    <p>En plein centre ville ou en pleine nature</p>
+    <form>
+        <input type="text" placeholder="Marseille, France" maxlength = "17">
+        <button>
+            <span>Rechercher</span>
+            <i class="fas fa-search"></i>
+        </button>
+    </form>
+    
