resize du logo et petites modifs

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     
     <header>
         <a href="#">
-            <img src="images/logo/Booki.png" alt="Booki logo">
+            <img src="images/logo/Booki.png" alt="Booki logo" width="50%">
         </a>
         
         <nav>
             <a href="#Hebergements">Hébergements</a>
-            <a href="#Inscription" class="lien_inscrire">S'inscrire</a>
+            <a href="#Activités" class="lien_activités">Activités</a>
         </nav>
     </header>
 
