ajout css pour texte trouvez votre hebergement

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </body>
 </html>
 
-<section class="parametres">
+<section class="recherche">
     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
     <p>En plein centre ville ou en pleine nature</p>
     <form>
@@ -37,4 +37,5 @@
             <i class="fas fa-search"></i>
         </button>
     </form>
+    
     
