ajout de la classe filtre avec les noms des filtres en html

--- a/index.html
+++ b/index.html
@@ -38,4 +38,22 @@
         </button>
     </form>
     
-    
+    <div class="filtres">
+        <span>Filtres</span>
+        <div>
+                <i class="fas fa-money-bill-wave icon"></i>
+                <span class="descriptionfiltre">Économique</span>
+        </div>
+        <div>
+                <i class="fas fa-child icon"></i>
+                <span class="descriptionfiltre">Familial</span>
+        </div>
+        <div>
+                <i class="fas fa-heart icon"></i>
+                <span class="descriptionfiltre">Romantique</span>
+        </div>
+        <div>
+                <i class="fas fa-dog icon"></i>
+                <span class="descriptionfiltre">Animaux autorisés</span>
+        </div>
+    </div>
