--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
     <p>En plein centre ville ou en pleine nature</p>
     <form>
-        <input type="text" placeholder="Marseille, France" maxlength = "17">
+        <div class="fas fa-map-marker-alt map"></div>
+        <input type="text" placeholder="Marseille, France" >
         <button>
             <span>Rechercher</span>
             <i class="fas fa-search"></i>
