--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve et profitez d'un séjour agréable tout en visitant les quatre coins de la France">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <script src="https://kit.fontawesome.com/1455bfed97.js" crossorigin></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -33,10 +34,7 @@
     <form>
         <div class="fas fa-map-marker-alt map"></div>
         <input type="text" placeholder="Marseille, France" >
-        <button>
-            <span>Rechercher</span>
-            <i class="fas fa-search"></i>
-        </button>
+        <button>Rechercher</button>
     </form>
     
     <div class="filtres">
