ajout des icones et du css de la partie filtres

--- a/index.html
+++ b/index.html
@@ -56,3 +56,8 @@
                 <span class="descriptionfiltre">Animaux autorisés</span>
         </div>
     </div>
+
+    <div class="information">
+        <div class="fas fa-info rond"></div>
+        <span class="infoLogements">Plus de 500 logements sont disponibles dans cette ville</span>
+    </div>  
