--- a/index.html
+++ b/index.html
@@ -61,3 +61,87 @@
         <div class="fas fa-info rond"></div>
         <span class="infoLogements">Plus de 500 logements sont disponibles dans cette ville</span>
     </div>  
+</section>
+
+
+<div id="Hebergements" class="hebergement">
+    <section>
+        <h2>Hébergement à Marseille</h2>
+        <div class="cartes">
+            <div>
+                <article>
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la cannebière">
+                    <h3>Auberge la Cannebière</h3>
+                    <span class="description">Nuit à partir de <strong>25€</strong></span>
+                    <span class="etoiles" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star grise"></i>
+                    </span>
+                </article>
+                <article>
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel du port">
+                    <h3>Hôtel du port</h3>
+                    <span class="description">Nuit à partir de <strong>52€</strong></span>
+                    <span class="etoiles" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                    </span>
+                </article>
+                <article>
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel Les mouettes">
+                    <h3>Hôtel Les mouettes</h3>
+                    <span class="description">Nuit à partir de <strong>76€</strong></span>
+                    <span class="etoiles" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star grise"></i>
+                    </span>
+                </article>
+            </div>
+            <div>
+                <article>
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel de la mer">
+                    <h3>Hôtel de la mer</h3>
+                    <span class="description">Nuit à partir de <strong>46€</strong></span>
+                    <span class="etoiles" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star grise"></i>
+                        <i class="fas fa-star grise"></i>
+                    </span>
+                </article>
+                <article>
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo d'une chambre de l'Auberge Le Panier">
+                    <h3>Auberge Le Panier</h3>
+                    <span class="description">Nuit à partir de <strong>23€</strong></span>
+                    <span class="etoiles" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star grise"></i>
+                    </span>
+                </article>
+                <article>
+                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel chez Amina">
+                    <h3>Hôtel chez Amina</h3>
+                    <span class="description">Nuit à partir de <strong>95€</strong></span>
+                    <span class="etoiles" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                    </span>
+                </article>
+            </div>
+        </div>
