ajout hover sur les filtres

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
         </nav>
     </header>
 
-</body>
-</html>
-
 <section class="recherche">
     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
     <p>En plein centre ville ou en pleine nature</p>
@@ -41,19 +38,19 @@
         <span>Filtres</span>
         <div>
                 <i class="fas fa-money-bill-wave icon"></i>
-                <span class="descriptionfiltre">Économique</span>
+                <span class="textfiltre">Économique</span>
         </div>
         <div>
                 <i class="fas fa-child icon"></i>
-                <span class="descriptionfiltre">Familial</span>
+                <span class="textfiltre">Familial</span>
         </div>
         <div>
                 <i class="fas fa-heart icon"></i>
-                <span class="descriptionfiltre">Romantique</span>
+                <span class="textfiltre">Romantique</span>
         </div>
         <div>
                 <i class="fas fa-dog icon"></i>
-                <span class="descriptionfiltre">Animaux autorisés</span>
+                <span class="textfiltre">Animaux autorisés</span>
         </div>
     </div>
 
@@ -145,3 +142,9 @@
                 </article>
             </div>
         </div>
+
+
+
+
+    </body>
+    </html>
