--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
                 </article>
             </div>
         </div>
+        <p>Afficher plus</p>
+     </section>
+
+
+           
+
+
+
 
 
 
