ajout du aside pour démarrer les cartes populaires à droite de la section hebergement

--- a/index.html
+++ b/index.html
@@ -145,8 +145,66 @@
         <p>Afficher plus</p>
      </section>
 
+<!--aside pour que les cartes de droites se mettent à coté de ma section-->
+     <aside>  
+        <div class="lespopulaires">
+            <h2>Les plus populaires</h2>
+            <i class="fas fa-chart-line"></i>
+        </div>
+        <div>
+            <article>
+                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel Le soleil du matin">
+                <div>
+                    <h3>Hôtel Le soleil du matin</h3>
+                    <span>Nuit à partir de <strong>128€</strong></span>
+                    <span class="etoiles_pop1" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                    </span>
+                </div>
+            </article>
+            <article>
+                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo d'une chambre d'hôte de l'Hôtel Au cœur de l'eau ">
+                <div>
+                    <h3>Au cœur de l'eau<br>Chambres<br>d'hôtes</h3>
+                    <span>Nuit à partir de <strong>71€</strong></span>
+                    <span class="etoiles_pop2" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star grise"></i>
+                    </span>
+                </div>
+            </article>
+            <article>
+                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel Tout bleu et Blanc">
+                <div>
+                    <h3>Hôtel Tout bleu et Blanc</h3>
+                    <span>Nuit à partir de <strong>68€</strong></span>
+                    <span class="etoiles_pop3" >
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star bleu"></i>
+                        <i class="fas fa-star grise"></i>
+                    </span>
+                </div>
+            </article>
+        </div>
+    </aside>
+</div>
 
-           
+
+
+
+
+
+
+
 
 
 
