ajout du css du aside cartes descriptions et etoiles

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div>
                     <h3>Hôtel Le soleil du matin</h3>
                     <span>Nuit à partir de <strong>128€</strong></span>
-                    <span class="etoiles_pop1" >
+                    <span class="etoiles_pop" >
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
@@ -171,7 +171,7 @@
                 <div>
                     <h3>Au cœur de l'eau<br>Chambres<br>d'hôtes</h3>
                     <span>Nuit à partir de <strong>71€</strong></span>
-                    <span class="etoiles_pop2" >
+                    <span class="etoiles_popu" >
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
@@ -185,7 +185,7 @@
                 <div>
                     <h3>Hôtel Tout bleu et Blanc</h3>
                     <span>Nuit à partir de <strong>68€</strong></span>
-                    <span class="etoiles_pop3" >
+                    <span class="etoiles_pop" >
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
