ajout zone 1 activité avec les 3 premieres cartes en html

--- a/index.html
+++ b/index.html
@@ -198,6 +198,26 @@
     </aside>
 </div>
 
+<!--activités à Marseille -->
+<section id="Activites" class="activites">
+    <h2>Activités à Marseille</h2>
+    <div class="cartescactivites">
+        <div class="zoneun">
+            <article class="cartevieuxport">
+                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
+                <h3>Vieux Port</h3>
+            </article>
+            <article class="cartefort">
+                <div class="doublecartepartie1">
+                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                    <h3>Fort de Pomègues</h3>
+                </div>
+                <div class="carteiles">
+                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                    <h3>Îles du Frioul</h3>
+                </div>
+            </article>
+        </div>
 
 
 
