--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
 <!--activités à Marseille -->
 <section id="Activites" class="activites">
     <h2>Activités à Marseille</h2>
-    <div class="cartescactivites">
+    <div class="cartesactivites">
         <div class="zoneun">
             <article class="cartevieuxport">
                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
                 <h3>Vieux Port</h3>
             </article>
-            <article class="cartefort">
-                <div class="doublecartepartie1">
+            <article class="petitescartes">
+                <div class="cartefort">
                     <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                     <h3>Fort de Pomègues</h3>
                 </div>
@@ -219,6 +219,25 @@
             </article>
         </div>
 
+        <div class="zonedeux">
+            <article class="cartevieuxport">
+                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
+                <h3>Parc National Des Calanques</h3>
+            </article>
+            <article class="petitescartes">
+                <div class="cartedame">
+                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </div>
+                <div class="carteparc">
+                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                    <h3>Parc Longchamp</h3>
+                </div>
+            </article>
+        </div>
+
+    </div>
+</section>
 
 
 
