petites modifs et ajout du footer en html

--- a/index.html
+++ b/index.html
@@ -241,6 +241,27 @@
 
 
 
+<!--footer -->
+
+<footer>
+    <section>
+        <h2>A propos</h2>
+        <p>Fonctionnement du site</p>
+        <p>Conditions générales de vente</p>
+        <p>Données et confidentialité</p>
+    </section>
+    <section>
+        <h2>Nos hébergements</h2>
+        <p>Charte qualité</p>
+        <p>Soumettre votre hôtel</p>
+    </section>
+    <section>
+        <h2>Assistance</h2>
+        <p>Centre d'aide</p>
+        <p>Nous contacter</p>
+    </section>
+</footer>
+
 
 
 
