ajout du css du footer + des hrefs pour que les cartes hebergements soient cliquables

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <div class="cartes">
             <div>
                 <article>
+                    <a href="#auberge">
                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la cannebière">
                     <h3>Auberge la Cannebière</h3>
                     <span class="description">Nuit à partir de <strong>25€</strong></span>
@@ -77,8 +78,10 @@
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star grise"></i>
                     </span>
+                    </a>
                 </article>
                 <article>
+                    <a href="#hotelduport">
                     <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel du port">
                     <h3>Hôtel du port</h3>
                     <span class="description">Nuit à partir de <strong>52€</strong></span>
@@ -89,8 +92,10 @@
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
                     </span>
+                    </a>
                 </article>
                 <article>
+                    <a href="#hotellesmouettes">
                     <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel Les mouettes">
                     <h3>Hôtel Les mouettes</h3>
                     <span class="description">Nuit à partir de <strong>76€</strong></span>
@@ -101,10 +106,12 @@
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star grise"></i>
                     </span>
+                    </a>
                 </article>
             </div>
             <div>
                 <article>
+                    <a href="#hoteldelamer">
                     <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel de la mer">
                     <h3>Hôtel de la mer</h3>
                     <span class="description">Nuit à partir de <strong>46€</strong></span>
@@ -115,8 +122,10 @@
                         <i class="fas fa-star grise"></i>
                         <i class="fas fa-star grise"></i>
                     </span>
+                    </a>
                 </article>
                 <article>
+                    <a href="#aubergelepanier">
                     <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo d'une chambre de l'Auberge Le Panier">
                     <h3>Auberge Le Panier</h3>
                     <span class="description">Nuit à partir de <strong>23€</strong></span>
@@ -127,8 +136,10 @@
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star grise"></i>
                     </span>
+                    </a>
                 </article>
                 <article>
+                    <a href="#hotelchezamina">
                     <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo d'une chambre de l'Hôtel chez Amina">
                     <h3>Hôtel chez Amina</h3>
                     <span class="description">Nuit à partir de <strong>95€</strong></span>
@@ -139,6 +150,7 @@
                         <i class="fas fa-star bleu"></i>
                         <i class="fas fa-star bleu"></i>
                     </span>
+                    </a>
                 </article>
             </div>
         </div>
@@ -209,11 +221,11 @@
             </article>
             <article class="petitescartes">
                 <div class="cartefort">
-                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                    <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                     <h3>Fort de Pomègues</h3>
                 </div>
                 <div class="carteiles">
-                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                    <img src="images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
                     <h3>Îles du Frioul</h3>
                 </div>
             </article>
