ajout des hrefs sur les titres activités et hebergements à marseille

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
 <div id="Hebergements" class="hebergement">
     <section>
+        <a href="#hebergementsàmarseille">
         <h2>Hébergement à Marseille</h2>
+        </a>
         <div class="cartes">
             <div>
                 <article>
@@ -212,7 +214,9 @@
 
 <!--activités à Marseille -->
 <section id="Activites" class="activites">
+    <a href="#activitésàmarseille">
     <h2>Activités à Marseille</h2>
+    </a>
     <div class="cartesactivites">
         <div class="zoneun">
             <article class="cartevieuxport">
@@ -274,15 +278,5 @@
     </section>
 </footer>
 
-
-
-
-
-
-
-
-
-
-
-    </body>
-    </html>
+</body>
+</html>
