--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <i class="fas fa-heart icon"></i>
                 <span class="textfiltre">Romantique</span>
         </div>
-        <div>
+        <div class="animaux">
                 <i class="fas fa-dog icon"></i>
                 <span class="textfiltre">Animaux autorisés</span>
         </div>
